# python-learn

./: docker-compose.yml  readme.md
docker/mariadb/: .gitignore
fastapi-demo/: pyproject.toml
fastapi-demo/fastapi_demo/: database.py  model.py
python-basic/: pyproject.toml
python-basic/python_basic/: fizz_bazz.py  main.py
python-basic/tests/: test_python_basic.py
