[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["renmurakami <autoeyy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.35"
mysqlclient = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
